--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>HK Kronk random levers order</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     <div class="container py-4 px-3 mx-auto">
@@ -19,8 +20,8 @@
           <button class="btn btn-primary mb-3" id="generateButton">
             Generate
           </button>
-          <!-- <p class="mt-3 h4">Settings</p>
-          <form>
+          <p class="mt-3 h4">Settings</p>
+          <form id="settingsForm">
             <div class="row g-3 align-items-center">
               <div class="col-auto">
                 <label for="inputDifficulty" class="col-form-label"
@@ -33,12 +34,34 @@
                   id="inputDifficulty"
                   aria-label="Difficulty selection"
                 >
-                  <option value="0" selected>Easy</option>
-                  <option value="1">Normal</option>
+                  <option value="0">Easy</option>
+                  <option value="1" selected>Normal</option>
                 </select>
               </div>
             </div>
-          </form> -->
+            <div class="mt-3">
+              <label for="inputGroupingFactor" class="form-label"
+                >Grouping factor</label
+              >
+              <input
+                type="number"
+                id="inputGroupingFactor"
+                class="form-control"
+                aria-describedby="inputGroupingFactorHelp"
+                value="5"
+              />
+              <div id="inputGroupingFactorValidation" class="invalid-feedback invisible">
+                Grouping factor should be between 0 and 10.
+              </div>
+              <div id="inputGroupingFactorHelp" class="form-text">
+                This option controls grouping of nearby levers (ie. putting them
+                close to each other in the order). A value of 10 (the maximum)
+                means all close by levers are put together (unless some of them
+                are unreachable on the first trip to the area), while a value of
+                0 disables this feature.
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
