Fixing some lever long names and logic for Lemm

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <!-- Randomizer output -->
         <div class="col">
           <p class="h3">Randomized order:</p>
-          <ul id="randomOrderOutput"></ul>
+          <ol id="randomOrderOutput"></ol>
         </div>
         <!-- Form for settings -->
         <div class="col">
@@ -73,5 +73,14 @@
         </div>
       </div>
     </div>
+    <footer class="mb-3">
+      <div class="container">
+        <span class="text-muted me-3">Version 1.1.0</span>
+        <a
+          href="https://github.com/flavio-a/HollowKnight-krlo-generator/blob/main/credits.md"
+          >Credits</a
+        >
+      </div>
+    </footer>
   </body>
 </html>
