--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,7 @@
                 >
                   <option value="0">Easy</option>
                   <option value="1" selected>Normal</option>
+                  <option value="2">Hard</option>
                 </select>
               </div>
             </div>
